--- a/gui/main.glade
+++ b/gui/main.glade
@@ -232,7 +232,8 @@ Author: Himanshu Rastogi
                           <object class="GtkFileChooserButton" id="fileChooser">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="title" translatable="yes"/>
+                            <property name="title" translatable="yes">Choose File</property>
+                            <property name="width_chars">16</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -610,6 +611,9 @@ Author: Himanshu Rastogi
                 <property name="position">2</property>
               </packing>
             </child>
+            <child>
+              <placeholder/>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -623,7 +627,16 @@ Author: Himanshu Rastogi
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <placeholder/>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Logs:</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <object class="GtkCheckButton" id="ejectCheckBox">
@@ -636,6 +649,7 @@ Author: Himanshu Rastogi
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="pack_type">end</property>
                 <property name="position">1</property>
               </packing>
             </child>
